--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "Krona One";
+  src: url("../fonts/Krona One/KronaOne-Regular.ttf");
+}
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat/Montserrat-VariableFont_wght.ttf");
+}
 body {
   margin: 0;
   padding: 0;
@@ -74,6 +82,7 @@ main.long-page {
   margin: 10vh auto;
   margin-bottom: 40vh;
   text-align: center;
+  width: -moz-fit-content;
   width: fit-content;
 }
 .heading-holder h1 {
@@ -113,7 +122,8 @@ main.long-page {
 .page-start #background-vid {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   z-index: -1;
 }
 .page-start .page-logo {
@@ -169,6 +179,7 @@ main.long-page {
 
 .video-info-box {
   margin-top: 10vh;
+  height: -moz-fit-content;
   height: fit-content;
   display: flex;
   flex-direction: row;
@@ -191,6 +202,7 @@ main.long-page {
   font-size: 1em;
 }
 .video-info-box .video-box {
+  width: -moz-fit-content;
   width: fit-content;
   padding: 2vh 5vw;
 }
@@ -203,7 +215,8 @@ main.long-page {
 .video-info-box .video-box .yt-vid-holder img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .video-info-box .video-box .yt-vid-holder .play-button {
   position: relative;
@@ -375,6 +388,7 @@ ul.more-v-padding li {
 }
 .navmenu ul li {
   padding: 1vh 1vh;
+  width: -moz-fit-content;
   width: fit-content;
 }
 .navmenu ul li a {
@@ -444,7 +458,8 @@ ul.more-v-padding li {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 #footer .footer-content ul {
   --icon-size: .8em;
@@ -523,13 +538,15 @@ ul.more-v-padding li {
 
 .large-image {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   box-sizing: border-box;
   margin: 2vh 0;
 }
 .large-image img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   margin: 0;
   padding: 0;
 }
@@ -549,7 +566,8 @@ ul.more-v-padding li {
 .image-gallery .image-holder img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .image-gallery.certs .image-holder {
   width: 25%;
@@ -559,7 +577,8 @@ ul.more-v-padding li {
   margin: 4vh;
 }
 .image-gallery.certs .image-holder img {
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .image-info-box {
@@ -571,6 +590,7 @@ ul.more-v-padding li {
 }
 .image-info-box .image-box {
   width: 47.5%;
+  height: -moz-fit-content;
   height: fit-content;
 }
 .image-info-box .image-box.multiple .image-box-child {
@@ -590,7 +610,8 @@ ul.more-v-padding li {
 .image-info-box .image-box img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .image-info-box .text-box {
   width: 47.5%;
@@ -657,6 +678,8 @@ ul.more-v-padding li {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 .staff .staff-info img {
   aspect-ratio: 1/1;
@@ -680,6 +703,7 @@ ul.more-v-padding li {
   margin-top: auto;
 }
 .staff .staff-end .sm-icon {
+  width: -moz-fit-content;
   width: fit-content;
 }
 .staff .staff-end .sm-icon i {
@@ -786,7 +810,8 @@ ul.more-v-padding li {
 .larged-image img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  -o-object-fit: contain;
+     object-fit: contain;
   margin: 0 auto;
 }
 .larged-image button {
