--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,13 @@
+@font-face{
+    font-family: "Krona One";
+    src: url("../fonts/Krona One/KronaOne-Regular.ttf");
+}
+
+@font-face{
+    font-family: "Montserrat";
+    src: url("../fonts/Montserrat/Montserrat-VariableFont_wght.ttf");
+}
+
 body {
     margin: 0;
     padding: 0;
